--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -1,36 +1,34 @@
-  ```yaml
-     name: Update Weather Data
+name: Update Weather Data
 
-     on:
-       schedule:
-         - cron: '0 * * * *' # Runs every hour
-       push:
-         branches:
-           - main
+on:
+  schedule:
+    - cron: '0 * * * *' # Runs every hour
+  push:
+    branches:
+      - main
 
-     jobs:
-       update:
-         runs-on: ubuntu-latest
+jobs:
+  update:
+    runs-on: ubuntu-latest
 
-         steps:
-           - name: Checkout repository
-             uses: actions/checkout@v3  # Updated to use Node.js 20
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-           - name: Set up Python
-             uses: actions/setup-python@v4  # Updated to use Node.js 20
-             with:
-               python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-           - name: Install dependencies
-             run: |
-               python -m pip install requests beautifulsoup4
+      - name: Install dependencies
+        run: |
+          python -m pip install requests beautifulsoup4
 
-           - name: Fetch and update weather data
-             run: |
-               python fetch_weather.py
-               git config --global user.name 'github-actions[bot]'
-               git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-               git add weather.txt
-               git commit -m 'Update weather data'
-               git push
-     ```
+      - name: Fetch and update weather data
+        run: |
+          python fetch_weather.py
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add weather.txt
+          git commit -m 'Update weather data'
+          git push
