--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -27,8 +27,13 @@ jobs:
       - name: Fetch and update weather data
         run: |
           python fetch_weather.py
+
+      - name: Commit and push changes
+        env:
+          ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+        run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add weather.txt
           git commit -m 'Update weather data'
-          git push
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git
