--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -36,4 +38,6 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add weather.txt
           git commit -m 'Update weather data'
-          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+
+        
