--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -12,6 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
@@ -38,6 +43,7 @@ jobs:
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add weather.txt
           git commit -m 'Update weather data'
+          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
           git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
 
         
