--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -39,6 +39,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git
           git add weather.txt
           git commit -m 'Update weather data'
-          git push https://x-access-token:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }}.git HEAD:main
+          git push origin HEAD:main
