--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -44,3 +44,9 @@ jobs:
           git add weather.txt
           git commit -m 'Update weather data'
           git push origin HEAD:main
+      - name: Debugging step
+        run: |
+          echo "Checking if ACTIONS_PAT is set"
+          echo ${{ secrets.ACTIONS_PAT }}
+          git config --global --list
+          git status
