--- a/.github/workflows/update-weather.yml
+++ b/.github/workflows/update-weather.yml
@@ -34,6 +34,10 @@ jobs:
         run: |
           python fetch_weather.py
 
+      - name: Create .gitconfig if not exists
+        run: |
+          touch ~/.gitconfig
+
       - name: Debugging step
         run: |
           echo "Checking if ACTIONS_PAT is set"
